--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
+black==23.7.0
 click==8.1.4
 colorama==0.4.6
+coverage==7.2.7
 cssbeautifier==1.14.8
 dj-database-url==2.0.0
 Django==4.2.3
@@ -12,11 +14,17 @@ html-tag-names==0.1.2
 html-void-elements==0.1.0
 jsbeautifier==1.14.8
 json5==0.9.14
+mccabe==0.7.0
+mypy-extensions==1.0.0
 packaging==23.1
 pathspec==0.11.1
+Pillow==10.0.0
+platformdirs==3.10.0
 psycopg-binary==3.1.9
 psycopg2==2.9.6
 psycopg2-binary==2.9.6
+pycodestyle==2.11.0
+pyflakes==3.1.0
 python-dotenv==1.0.0
 PyYAML==6.0
 regex==2023.6.3
@@ -25,4 +33,5 @@ sqlparse==0.4.4
 tomli==2.0.1
 tqdm==4.65.0
 typing_extensions==4.7.1
+tzdata==2023.3
 whitenoise==6.5.0
