--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 asgiref==3.7.2
 black==23.7.0
+bleach==6.0.0
 click==8.1.4
 colorama==0.4.6
 coverage==7.2.7
 cssbeautifier==1.14.8
 dj-database-url==2.0.0
 Django==4.2.3
+django-markdownfield==0.10.0
 django-on-heroku==1.1.2
 djlint==1.31.1
 EditorConfig==0.12.3
@@ -14,6 +16,7 @@ html-tag-names==0.1.2
 html-void-elements==0.1.0
 jsbeautifier==1.14.8
 json5==0.9.14
+Markdown==3.4.4
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.1
@@ -28,10 +31,12 @@ pyflakes==3.1.0
 python-dotenv==1.0.0
 PyYAML==6.0
 regex==2023.6.3
+shortuuid==1.0.11
 six==1.16.0
 sqlparse==0.4.4
 tomli==2.0.1
 tqdm==4.65.0
 typing_extensions==4.7.1
 tzdata==2023.3
+webencodings==0.5.1
 whitenoise==6.5.0
