--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.7.2
 autopep8==2.0.2
 black==23.7.0
 bleach==6.0.0
+boto3==1.28.35
+botocore==1.31.35
 click==8.1.4
 colorama==0.4.6
 coverage==7.2.7
@@ -11,11 +13,13 @@ Django==4.2.3
 django-debug-toolbar==4.2.0
 django-markdownfield==0.10.0
 django-on-heroku==1.1.2
+django-storages==1.13.2
 djlint==1.31.1
 EditorConfig==0.12.3
 gunicorn==21.2.0
 html-tag-names==0.1.2
 html-void-elements==0.1.0
+jmespath==1.0.1
 jsbeautifier==1.14.8
 json5==0.9.14
 Markdown==3.4.4
@@ -30,9 +34,11 @@ psycopg2==2.9.6
 psycopg2-binary==2.9.6
 pycodestyle==2.11.0
 pyflakes==3.1.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 PyYAML==6.0
 regex==2023.6.3
+s3transfer==0.6.2
 shortuuid==1.0.11
 six==1.16.0
 sqlparse==0.4.4
@@ -40,5 +46,6 @@ tomli==2.0.1
 tqdm==4.65.0
 typing_extensions==4.7.1
 tzdata==2023.3
+urllib3==1.26.16
 webencodings==0.5.1
 whitenoise==6.5.0
