--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ pathspec==0.11.1
 Pillow==10.0.0
 platformdirs==3.10.0
 psycopg-binary==3.1.9
-psycopg2==2.9.6
+# psycopg2==2.9.6
 psycopg2-binary==2.9.6
 pycodestyle==2.11.0
 pyflakes==3.1.0
